Did some stupid things
very basic version of tooltip

--- a/client/future/future.css
+++ b/client/future/future.css
@@ -163,8 +163,8 @@
 div.tooltip {
   position: absolute;
   text-align: center;
-  width: 48px;
-  height: 16px;
+  width: 170px;
+  height: 170px;
   padding: 2px;
   font: 12px sans-serif;
   border: 0px;
@@ -172,6 +172,7 @@ div.tooltip {
   pointer-events: none;
   box-shadow: 0px 2px 5px #888888;
   color: #424242;
+  left: 0px;
 }
 
 .fields .group {
@@ -181,6 +182,10 @@ div.tooltip {
   justify-content: center;
   align-items: center;
   width: 160px;
+}
+
+.tooltipBar{
+  fill: black;
 }
 
 .legend3{border-radius: 4px 0px 0px 4px;}
