--- a/client/body/body.css
+++ b/client/body/body.css
@@ -314,3 +314,8 @@ display: flex;
 flex-direction: column;
 justify-content: flex-start;
 } 
+
+.colijkingstoets * {
+transform-origin: 0% 0%;
+  
+}
