--- a/client/body/body.css
+++ b/client/body/body.css
@@ -210,12 +210,12 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: white;
+  /* background: white; */
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin-top: 5%;
   display:none;
 }
 .courseseparator{
