--- a/client/planning/planning.css
+++ b/client/planning/planning.css
@@ -1,11 +1,9 @@
-#planning
-{
-  text-align: center;
-  height:180px;
+#planning {
+    text-align: center;
+    height: 180px;
 
 }
 
-#planning > h2
-{
-  font-size:.8em;
+#planning > h2 {
+    font-size: .8em;
 }
