--- a/client/templates/CSE/bar.html
+++ b/client/templates/CSE/bar.html
@@ -1,3 +1,4 @@
 <template name="CSE_bar">
-CSE {{percent}}%<paper-progress value="{{percent}}" max="100" min="0"></paper-progress>{{raw}}<b>/{{credits}}</b>
+    CSE {{percent}}%
+    <paper-progress value="{{percent}}" max="100" min="0"></paper-progress>{{raw}}<b>/{{credits}}</b>
 </template>
