--- a/client/september/september.css
+++ b/client/september/september.css
@@ -1,10 +1,9 @@
-#september
-{
-  text-align: center;
-  height:180px;
+#september {
+    text-align: center;
+    height: 180px;
 
 }
-#september > h2
-{
-  font-size:.8em;
+
+#september > h2 {
+    font-size: .8em;
 }
