--- a/client/body/body.css
+++ b/client/body/body.css
@@ -1,7 +1,7 @@
 body {
-    /* Need to fix this.. to a standard size */
+    /* TODO: Need to fix this.. to a standard size */
     max-width: 100%;
-    min-width: 1450px;
+    /*min-width: 1450px;*/
 }
 
 .main-container {
@@ -21,7 +21,6 @@ body {
     height: 100%;
     background: white;
     z-index: 1000;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -77,7 +76,6 @@ body {
 
     -webkit-flex-flow: column wrap;
     flex-flow: column wrap;
-    width: 300px;
 }
 
 .flex-row {
@@ -89,13 +87,13 @@ body {
     display: -webkit-flex;
     display: flex;
     -webkit-flex-flow: row wrap;
-    flex-flow: row wrap;
+    flex-flow: nowrap;
     width: 100%;
     height: auto;
 }
 
 .flex-item {
-    width: 95%;
+    width: 45%;
     justify-content: space-around;
 }
 
@@ -112,6 +110,20 @@ body {
 }
 
 .flex-column {
+    flex-grow: 1;
+    justify-content: flex-start;
+    min-width: 350px;
+    max-width: 350px;
+    min-height: 700px;
+    border-right: 1px solid #ececec;
+    border-bottom: 1px solid #ececec;
+    border-top: 1px solid #ececec;
+    transition: all 0.7s ease-out;
+    position: relative;
+}
+
+#colfuture{
+    /*flex-grow: 1;*/
     min-width: 180px;
     max-width: 180px;
     min-height: 700px;
@@ -161,10 +173,12 @@ body {
 
 .flex-column .bottom {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+    /*height: 100%;*/
+    border-top: 1px dotted #ececec
 }
 
 .flex-column .top .fa {
