--- a/client/body/body.css
+++ b/client/body/body.css
@@ -43,7 +43,7 @@ body {
 }
 
 .nostudent {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     color: var(--TextColor);
