--- a/client/body/body.css
+++ b/client/body/body.css
@@ -42,6 +42,43 @@ body {
     align-items: center;
 }
 
+.loading-screen h1 {
+  color: #7c7c7c;
+  font-size: 16px;
+  margin-top: 16px;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.loading-csetool {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    color: var(--TextColor);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-csetool h1 {
+  color: #7c7c7c;
+  font-size: 16px;
+  margin-top: 16px;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.nostudent h1 {
+  color: #7c7c7c;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 300;
+}
+
 .nostudent {
     display: flex;
     flex-direction: column;
