--- a/client/main.css
+++ b/client/main.css
@@ -8,6 +8,5 @@
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
-    /* Non-prefixed version, currently
-                                     supported by Chrome and Opera */
+    /* Non-prefixed version, currently supported by Chrome and Opera */
 }
