--- a/client/september/HerexamenColumn/failedColumn.css
+++ b/client/september/HerexamenColumn/failedColumn.css
@@ -1,3 +1,31 @@
 .failed-column .middle {
   height: 129px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.failed-column .middle h5 {
+  width: 100%;
+  text-align: end;
+  padding-right: 8px;
+  font-weight: 500;
+  color: #828282;
+}
+
+.failed-column .eerste-failed {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: dotted 1px #ececec;
+}
+
+.failed-column .tweede-failed {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: dotted 1px #ececec;
 }
