--- a/client/september/circleGraph/circleGraph.css
+++ b/client/september/circleGraph/circleGraph.css
@@ -1,3 +1,52 @@
-.circleGraph {
-    text-align: center;
+.cg-container {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  clip-path: circle(50px at center);
+}
+
+.cg-container .circleGraph {
+  text-align: center;
+  overflow: visible;
+}
+
+.cg-container .cg-bar {
+  width: 100px;
+  height: 20px;
+  position: absolute;
+  bottom: 0;
+}
+
+.cg-container .all {
+  height: 20px;
+  background-color: #648694fc;
+  background-image: url(/pattern.png);
+  transition: all 0.4s ease;
+}
+
+.cg-container .checked {
+  height: 60px;
+  background: #81A8B8;
+  transition: all 0.4s ease;
+}
+
+.cg-border {
+  width: 104px;
+  height: 104px;
+  border-radius: 50%;
+  border: 1px dotted grey;
+  position: absolute;
+  bottom: 12px;
+  z-index: -1;
+}
+
+.cg-container .checked:hover {
+  cursor: pointer;
+  background: #7db0c5;
+}
+
+.cg-container .all:hover {
+  cursor: pointer;
+  background: #567582fc;
+  background-image: url(/pattern.png);
 }
