--- a/client/september/circleGraph/circleGraph.css
+++ b/client/september/circleGraph/circleGraph.css
@@ -59,3 +59,52 @@
   background: #567582fc;
   background-image: url(/pattern.png);
 }
+
+/* THE LEGEND */
+
+.cg-legend {
+  visibility: hidden;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  background: rgba(251,251,251,0.9);
+  z-index: 1;
+  border-radius: 5px;
+  padding: 10px;
+  color: #525252;
+  right: -200px;
+  top: 0px;
+  box-shadow: 0px 0px 4px #888888;
+}
+
+.cg-legend h2 {
+  font-size: 12px;
+  font-weight: 300;
+  padding-left: 10px;
+}
+
+.cg-legend .cg-legend-text{
+  display: flex;
+}
+
+.cg-legend .cg-legend-square {
+  min-width: 20px;
+  min-height: 20px;
+  max-width: 20px;
+  max-height: 20px;
+  background: white;
+}
+
+.cg-legend .cg-blue {
+  background: #81A8B8;
+}
+
+.cg-legend .cg-pattern {
+  background-color: #648694fc;
+  background-image: url(/pattern.png);
+}
+
+.cg-container:hover .cg-legend {
+    visibility: visible;
+}
