--- a/client/course/resultGraph/resultGraph.css
+++ b/client/course/resultGraph/resultGraph.css
@@ -11,6 +11,10 @@
     border-color: var(--Pass);
 }
 
+.course.error {
+  border-color: var(--Error);
+}
+
 .course.tolerable {
     border-color: var(--Tolerable);
 }
@@ -26,6 +30,11 @@
 .course .top-bar.tolerable {
     background: var(--Tolerable);
 }
+
+.course .top-bar.error {
+    background: var(--Error);
+}
+
 
 /*.course .top-bar.failed:hover    { background: #ec877e; }
 .course .top-bar.passed:hover    { background: #9fcca1; }
@@ -46,4 +55,8 @@
 
 .course-top.tolerable {
     border-color: var(--Tolerable);
+}
+
+.course-top.error {
+    border-color: var(--Error);
 }
