--- a/client/course/course.css
+++ b/client/course/course.css
@@ -37,6 +37,11 @@
     align-items: flex-end;
     width: 100%;
     position: relative;
+    font-size: 13px;
+    font-weight: 500;
+    display: flex;
+    align-items: baseline;
+    color: var(--TextColor);
 }
 
 .course .name {
