--- a/static/stylesheets/body.css
+++ b/static/stylesheets/body.css
@@ -180,6 +180,8 @@ body {
     position: relative; */
 }
 
+
+
 .flex-column .vertical-title {
     display: none;
     position: absolute;
@@ -304,6 +306,17 @@ body {
 }
 
 .tolerantiepunten {
+    color: #777777;
+    text-align: center;
+    font-size: .7em;
+    min-height: 16px;
+    display: flex;
+    align-items: baseline;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.bachelorCredits {
     color: #777777;
     text-align: center;
     font-size: .7em;
