--- a/static/stylesheets/body.css
+++ b/static/stylesheets/body.css
@@ -11,6 +11,7 @@
     --TextColor: #424242;
     --Pass: #a5d6a7;
     --Tolerable: #ffcc80;
+    --Tolerated: #81A8B8;
     --Fail: #ff8a80;
     --Error: #C2CBCE;
 }
