--- a/static/stylesheets/resultGraph.css
+++ b/static/stylesheets/resultGraph.css
@@ -19,6 +19,10 @@
     border-color: var(--Tolerable);
 }
 
+.course.tolerated {
+    border-color: var(--Tolerated)
+}
+
 .course .top-bar.failed {
     background: var(--Fail);
 }
@@ -29,6 +33,10 @@
 
 .course .top-bar.tolerable {
     background: var(--Tolerable);
+}
+
+.course .top-bar.tolerated {
+    background: var(--Tolerated);
 }
 
 .course .top-bar.error {
